# DiningPhilosophersProblem

./: .gitignore  CMakeLists.txt  Philosopher.cpp  Philosopher.h  Program.cpp  Program.h  README.md  WaitForInput.cpp  WaitForInput.h  Waiter.cpp  Waiter.h  main.cpp
